# interview

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: code-checker.yaml
app/: main.py
app/v1/: api.py
app/v1/endpoints/: deposit.py
app/v1/models/: deposit.py  exceptions.py
app/v1/utils/: exceptions.py
tests/test_models/: test_deposit.py
tests/test_routes/: test_deposit.py
tests/test_unit/: test_calculate.py
tests/test_utils/: test_exceptions.py
